{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 161,
  "lineage": "ad01ef75-5e2a-fc3a-146c-b9638aa80ad4",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0559a77dbcdfac546",
            "domain": "vpc",
            "id": "eipalloc-0559a77dbcdfac546",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-192-7-252.compute-1.amazonaws.com",
            "public_ip": "34.192.7.252",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-0"
            },
            "tags_all": {
              "Name": "eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f1647dff4cbbd81",
            "domain": "vpc",
            "id": "eipalloc-06f1647dff4cbbd81",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-156-39-133.compute-1.amazonaws.com",
            "public_ip": "54.156.39.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-1"
            },
            "tags_all": {
              "Name": "eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i_gateway",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:internet-gateway/igw-0f98a16cf4d4473ad",
            "id": "igw-0f98a16cf4d4473ad",
            "owner_id": "251095668064",
            "tags": {
              "Name": "i_gateway"
            },
            "tags_all": {
              "Name": "i_gateway"
            },
            "vpc_id": "vpc-00d9cb47e07e338c5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nats",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0559a77dbcdfac546",
            "association_id": "eipassoc-0fb127a35adcdab0a",
            "connectivity_type": "public",
            "id": "nat-03fb21ecf84b7f6f4",
            "network_interface_id": "eni-076027462c827da44",
            "private_ip": "141.0.1.15",
            "public_ip": "34.192.7.252",
            "subnet_id": "subnet-0019e27d9189bf888"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f1647dff4cbbd81",
            "association_id": "eipassoc-00ea4b2cfa162861b",
            "connectivity_type": "public",
            "id": "nat-0b084cf65ead98394",
            "network_interface_id": "eni-06223577fa0b6918a",
            "private_ip": "141.0.2.10",
            "public_ip": "54.156.39.133",
            "subnet_id": "subnet-0c8bfae70e5d39e9f"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00a21ec8ca3689d941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03fb21ecf84b7f6f4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00a21ec8ca3689d94",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d967589bee44611b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b084cf65ead98394",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d967589bee44611b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f98a16cf4d4473ad",
            "id": "r-rtb-09d16161bc1eff4551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09d16161bc1eff455",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_tables",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:route-table/rtb-00a21ec8ca3689d94",
            "id": "rtb-00a21ec8ca3689d94",
            "owner_id": "251095668064",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00d9cb47e07e338c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:route-table/rtb-0d967589bee44611b",
            "id": "rtb-0d967589bee44611b",
            "owner_id": "251095668064",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00d9cb47e07e338c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:route-table/rtb-09d16161bc1eff455",
            "id": "rtb-09d16161bc1eff455",
            "owner_id": "251095668064",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00d9cb47e07e338c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcf93668238f7f1d",
            "route_table_id": "rtb-00a21ec8ca3689d94",
            "subnet_id": "subnet-042959d3d5880a509"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03405b7869f959466",
            "route_table_id": "rtb-0d967589bee44611b",
            "subnet_id": "subnet-080b751da4b598235"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8b0650ecc523a88",
            "route_table_id": "rtb-09d16161bc1eff455",
            "subnet_id": "subnet-0019e27d9189bf888"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d6bc7c5d6402944",
            "route_table_id": "rtb-09d16161bc1eff455",
            "subnet_id": "subnet-0c8bfae70e5d39e9f"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_groups",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "custom-security-group",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:security-group/sg-0ebf9cb78fce4ec2c",
            "description": "Inbound \u0026 Outbound traffic for custom-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebf9cb78fce4ec2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "custom-security-group",
            "name_prefix": "",
            "owner_id": "251095668064",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00d9cb47e07e338c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:subnet/subnet-042959d3d5880a509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "141.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042959d3d5880a509",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251095668064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-0"
            },
            "tags_all": {
              "Name": "private_subnet-0"
            },
            "vpc_id": "vpc-00d9cb47e07e338c5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:subnet/subnet-080b751da4b598235",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "141.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080b751da4b598235",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251095668064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-1"
            },
            "tags_all": {
              "Name": "private_subnet-1"
            },
            "vpc_id": "vpc-00d9cb47e07e338c5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:subnet/subnet-0019e27d9189bf888",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "141.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0019e27d9189bf888",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251095668064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-0"
            },
            "tags_all": {
              "Name": "public_subnet-0"
            },
            "vpc_id": "vpc-00d9cb47e07e338c5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:subnet/subnet-0c8bfae70e5d39e9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "141.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8bfae70e5d39e9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251095668064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-1"
            },
            "tags_all": {
              "Name": "public_subnet-1"
            },
            "vpc_id": "vpc-00d9cb47e07e338c5"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251095668064:vpc/vpc-00d9cb47e07e338c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "141.0.0.0/16",
            "default_network_acl_id": "acl-0b6470aeef87f00ba",
            "default_route_table_id": "rtb-03115c6802762c1dd",
            "default_security_group_id": "sg-0f7f9d40d1b30fbc5",
            "dhcp_options_id": "dopt-034f7c18b789e6cca",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d9cb47e07e338c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03115c6802762c1dd",
            "owner_id": "251095668064",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}